eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-system-api-deployment
  labels:
    app: bank-system-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bank-system-api
  template:
    metadata:
      labels:
        app: bank-system-api
    spec:
      containers:
      - name: bank-system-api
        image: 356062354528.dkr.ecr.eu-west-3.amazonaws.com/banksystem:d0da9ce5047020b26928827b2a0c5bb7d3fe0124
        ports:
        - containerPort: 8080
