eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bank-system-api-service
spec:
  selector:
    app: bank-system-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
