eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bank-system-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: nginx
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: "api.daniel-soler.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: bank-system-api-service
            port:
              number: 80
  tls:
  - hosts:
    - "api.daniel-soler.com"
    secretName: exemple-de-clau-certificat
